Update button text

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -61,5 +61,5 @@ This ultimately leads to faster development cycles and more efficient use of res
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Learn more with the Supergraph Architecture Framework
+  Take the SAF assessment
 </TrackableButton>
