--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -47,5 +47,5 @@ By leveraging these observability tools, teams can proactively address performan
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Learn more with the Supergraph Architecture Framework
+  Take the SAF assessment
 </TrackableButton>
