--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -61,5 +61,5 @@ Teams can minimize the risk of production outages by being proactive about infra
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Learn more with the Supergraph Architecture Framework
+  Take the SAF assessment
 </TrackableButton>
