--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -60,5 +60,5 @@ Operation safelisting, circuit breaking, and rate limiting are effective techniq
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Learn more with the Supergraph Architecture Framework
+  Take the SAF assessment
 </TrackableButton>
