--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -60,5 +60,5 @@ These include:
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Learn more with the Supergraph Architecture Framework
+  Take the SAF assessment
 </TrackableButton>
