Rename reliability principle

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -42,7 +42,7 @@ Lowering mean-time-to-recover (MTTR) in your supergraph is crucial for maintaini
 By proactively monitoring and addressing issues, you can minimize the impact of downtime on your users.
 Additionally, tracking and analyzing metrics such as error rates and response times can identify potential issues before they become critical problems.
 
-### Prevent issues in production
+### Minimize risks in production
 
 Making the right infrastructure and process choices is key to preventing production outages.
 It's important to consider any potential issues and take steps to prevent them.
