--- a/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
@@ -23,7 +23,9 @@ We recommend reading about each pillar at the beginning of your supergraph journ
 
 ## Assess your graph
 
-The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding. SAF automatically saves your progress, allowing you to return and finish the assessment later.
+The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding.
+SAF automatically saves your progress, allowing you to return and finish the assessment later.
+The assessment also provides additional information and links to resources for each best practice.
 
 <TrackableButton
   size="lg"
