--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -26,9 +26,9 @@ Combining approaches like these creates a defense-in-depth strategy that maximiz
 ### Protect supergraph infrastructure
 
 Open subgraphs and unrestricted permissions can lead to unintended changes.
-You can protect your supergraph infrastructure by following these best practices:
+You can protect your supergraph infrastructure by following best practices such as:
 
-- Assigning and reviewing roles and permissions
+- Assigning and reviewing roles and permissions in your graph platform
 - Locking down publishing to production variants
 - Allowing only the graph router to access subgraphs
 
