Align subtitles to intro page

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
@@ -14,18 +14,18 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
 SAF centers its principles and best practices around five pillars:
 
 - [Operational excellence](./operational-excellence): Efficiently operate, monitor, and manage your supergraph.
-- [Security](./operational-excellence): Protect your supergraph from intentional and unintentional misuse and breaches.
+- [Security](./operational-excellence): Protect your data and infrastructure with a defense-in-depth approach.
 - [Reliability](./reliability): Design your supergraph for scale and high availability.
 - [Performance](./performance): Improve your supergraph's request and response performance.
-- [Developer experience](./developer-experience): Boost execution speed for developers producing and consuming the supergraph.
+- [Developer experience](./developer-experience): Boost developer velocity for graph consumers and contributors.
 
-We recommend reading about each pillar at the beginning of your supergraph journey.
+We recommend familiarizing yourself with each pillar at the beginning of your supergraph journey.
+The SAF assessment provides additional information and links to further resources.
 
 ## Assess your graph
 
 The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding.
 SAF automatically saves your progress, allowing you to return and finish the assessment later.
-The assessment also provides additional information and links to resources for each best practice.
 
 <TrackableButton
   size="lg"
@@ -33,7 +33,7 @@ The assessment also provides additional information and links to resources for e
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Take the SAF assessment
+  Learn more with the SAF assessment
 </TrackableButton>
 
 ### Report generation
