--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -1,6 +1,6 @@
 ---
 title: Performance
-subtitle: Boost performance with proactive monitoring and continuous improvement
+subtitle: Improve your supergraph's request and response performance
 description: Enhance federated GraphQL API performance with optimization techniques including subscriptions, caching, and observability tools.
 ---
 
@@ -47,5 +47,5 @@ By leveraging these observability tools, teams can proactively address performan
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Take the SAF assessment
+  Learn more with the SAF assessment
 </TrackableButton>
