--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -1,6 +1,6 @@
 ---
 title: Reliability
-subtitle: Test, monitor, and prevent issues before they reach production
+subtitle: Design your supergraph for scale and high availability
 description: Boost your federated GraphQL API's reliability via effective testing, efficient resource usage, and preventing issues before they reach production.
 ---
 
@@ -61,5 +61,5 @@ Teams can minimize the risk of production outages by being proactive about infra
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Take the SAF assessment
+  Learn more with the SAF assessment
 </TrackableButton>
