--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -4,8 +4,6 @@ subtitle: Protect your data and infrastructure with a defense-in-depth approach
 description: Secure your federated GraphQL API with Apollo GraphOS and a defense-in-depth approach. Prevent data leakage and protect upstream resources.
 ---
 
-import {ArrowRightIcon} from '../../../../components/Icons';
-
 The **Security** pillar focuses on protecting your federated GraphQL API from malicious actors and unintended changes.
 It also outlines how new GraphQL paradigms can work with your organization's existing standards.
 
@@ -60,5 +58,5 @@ Operation safelisting, circuit breaking, and rate limiting are effective techniq
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Take the SAF assessment
+  Learn more with the SAF assessment
 </TrackableButton>
