--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -1,6 +1,6 @@
 ---
 title: Developer Experience
-subtitle: Empower graph contributors and consumers
+subtitle: Boost developer velocity for graph consumers and contributors
 description: Enhance developer productivity with GraphQL Federation via streamlined workflows, effective schema management, and comprehensive onboarding.
 ---
 
@@ -61,5 +61,5 @@ This ultimately leads to faster development cycles and more efficient use of res
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Take the SAF assessment
+  Learn more with the SAF assessment
 </TrackableButton>
