Update paid roles info

--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -10,15 +10,15 @@ A GraphOS organization can have any number of members, and each member can be as
 
 Each organization member has one of the following roles:
 
-| Name                | Description                                                                                                                                                                                                                                                                                                                                           | Supported [plan types](https://www.apollographql.com/pricing/) |
-| ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
-| **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                                                   |                              All                               |
-| **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                                           |                        Enterprise only                         |
-| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/management/#protected-variants-enterprise-only).                                                                      |                        Enterprise only                         |
-| **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                                                 |                        Enterprise only                         |
-| **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for backend developers who are not authorized to make changes to graphs.                                                                                                                                       |                        Enterprise only                         |
-| **Consumer**        | Has view-only access to the organization's API schemas, but not supergraph or subgraph schemas, or metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.<p></p>This role is available to all plan types. For legacy Team plans, **Consumer** members do not count as billed users. |                              All                               |
-| **Billing Manager** | Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers).<p></p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.                                     |                      All paid plan types                       |
+| Name                | Description                                                                                                                                                                                                                                                                                                                                         | Supported [plan types](https://www.apollographql.com/pricing/) |
+| ------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
+| **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                                                 |                              All                               |
+| **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                                         |                        Enterprise only                         |
+| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/management/#protected-variants-enterprise-only).                                                                    |                        Enterprise only                         |
+| **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                                               |                        Enterprise only                         |
+| **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for backend developers who are not authorized to make changes to graphs.                                                                                                                                     |                        Enterprise only                         |
+| **Consumer**        | Has view-only access to the organization's API schemas, but not supergraph or subgraph schemas, or metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.<p></p>This role is available to all plan types. For plans that charge per user, Consumers do not count as billed users. |                              All                               |
+| **Billing Manager** | Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers).<p></p>This role is available to all paid plan types. For plans that charge per user, Billing Managers do not count as billed users.                                     |                      All paid plan types                       |
 
 Only members with the **Org Admin** role can assign roles to other members. You can see which role you have in a particular organization from your [user settings page](https://studio.apollographql.com/user-settings), or from the organization's Members tab.
 
