First draft of SAF pillar pages (#795)
* First draft of Reliability SAF pillar page

* Shorten Reliability principle descriptions

* Update navigation, add Security, Operational Excellence, and Performance pillars

* Fix spelling mistake

* Added Developer Experience pillar

* Update security pillar description from document

* Updated performance pillar description

* Move SAF button and add links to pillar pages

* Update Vale spelling rules

* DX copyedit

* DX copyedits

* Operational excellence copyedits

* Security copyedits

* Reliability copyedits

* Performance copyedits

* General copyedits

* More OpEx edits

* rewording

* Edits

* OpEx copyedits

* Add link to SAF

* Update button text

* Rename reliability principle

* Edits

* Align subtitles to intro page

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>
Co-authored-by: Lucas Leadbetter <5595530+lleadbet@users.noreply.github.com>

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
@@ -3,12 +3,29 @@ title: Supergraph Architecture Framework
 description: Learn about best practices and assess your graph's current state
 ---
 
-The Apollo <TrackableLink   href="https://saf.apollographql.com/"
-  eventName="content_saf"> Supergraph Architecture Framework (SAF) </TrackableLink> provides a collection of best practices in supergraph development. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
+The Apollo <TrackableLink href="https://saf.apollographql.com/" eventName="content_saf"> Supergraph Architecture Framework (SAF) </TrackableLink> provides a collection of best practices in supergraph development. These practices stem from Apollo's extensive experience collaborating with numerous engineering teams in building their supergraph implementations.
 
 The SAF includes an assessment to quantify your supergraph's current state and identify areas for improvement. Whether you're just starting with a supergraph or have been in production for years, you can use the SAF assessment to evaluate how well your API strategy aligns with Apollo's proven best practices.
 
 The results of the SAF assessment serve as a roadmap for architecture and platform teams, guiding your organization toward an optimal supergraph implementation.
+
+## SAF pillars
+
+SAF centers its principles and best practices around five pillars:
+
+- [Operational excellence](./operational-excellence): Efficiently operate, monitor, and manage your supergraph.
+- [Security](./operational-excellence): Protect your data and infrastructure with a defense-in-depth approach.
+- [Reliability](./reliability): Design your supergraph for scale and high availability.
+- [Performance](./performance): Improve your supergraph's request and response performance.
+- [Developer experience](./developer-experience): Boost developer velocity for graph consumers and contributors.
+
+We recommend familiarizing yourself with each pillar at the beginning of your supergraph journey.
+The SAF assessment provides additional information and links to further resources.
+
+## Assess your graph
+
+The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding.
+SAF automatically saves your progress, allowing you to return and finish the assessment later.
 
 <TrackableButton
   size="lg"
@@ -16,22 +33,8 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
-  Go to the Supergraph Architecture Framework
+  Learn more with the SAF assessment
 </TrackableButton>
-
-## SAF pillars
-
-SAF centers its principles and best practices around five pillars:
-
-- **Operational excellence**: Efficiently operate, monitor, and manage your supergraph.
-- **Security**: Protect your supergraph from intentional and unintentional misuse and breaches.
-- **Reliability**: Design your supergraph for scale and high availability.
-- **Performance**: Improve your supergraph's request and response performance.
-- **Developer efficiency**: Boost execution speed for developers producing and consuming the supergraph.
-
-## Assess your graph
-
-The SAF assessment breaks down each pillar into questions on topics like schema design, organizational structure, and supergraph onboarding. SAF automatically saves your progress, allowing you to return and finish the assessment later.
 
 ### Report generation
 
