Update Explorer subtitles and descriptions

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -2,7 +2,7 @@
 title: Documentation
 toc: true
 subtitle: ' '
-description: Learn how Apollo GraphQL can help build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
+description: Check out Apollo GraphQL's documentation to learn how to build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
 ---
 
 import {
