--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -1,8 +1,10 @@
 ---
 title: Embedding the Explorer
+subtitle: Embed the Explorer into your website to empower your graph's consumers
+description: Embed the GraphOS Studio Explorer in your webpage, customize its appearance and behavior, and set default GraphQL operations for easy testing.
 ---
 
-You can embed the [GraphOS Studio Explorer](./) in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
+You can embed the GraphOS Studio Explorer in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
 
 For example, here's an embedded Explorer for an Apollo example graph. Try it out!
 
