--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -1,6 +1,7 @@
 ---
-title: Operation collections in the Explorer
-description: Save and share frequently used GraphQL operations
+title: Operation collections
+subtitle: Save and share frequently used GraphQL operations
+description: Organize and share frequently used GraphQL operations with operation collections in GraphOS Studio Explorer.
 ---
 
 You can create _operation collections_ in the GraphOS Studio Explorer, enabling you to save, organize, and share your organization's frequently used GraphQL operations.
