--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -1,6 +1,8 @@
 ---
 title: Apollo Sandbox
-description: Use Studio tools without an Apollo account
+subtitle: Use GraphOS tools without an Apollo account
+description: Learn how Apollo Sandbox loads a running GraphQL server's schema and facilitates schema introspection, schema checks, offline usage, and more.
+
 ---
 
 _Apollo Sandbox_ is a special mode of GraphOS Studio that helps with local development. Sandbox loads a running GraphQL server's schema via introspection, instead of fetching published schemas from the Apollo registry.
