--- a/src/content/graphos/explorer/subscriptions-explorer.mdx
+++ b/src/content/graphos/explorer/subscriptions-explorer.mdx
@@ -1,5 +1,7 @@
 ---
-title: GraphQL subscriptions in the Explorer
+title: GraphQL subscription support
+subtitle: Execute GraphQL subscription operations in GraphOS Studio Explorer
+description: Execute GraphQL subscription operations in GraphOS Studio Explorer using WebSocket or HTTP protocols.
 ---
 
 The GraphOS Studio Explorer provides support for executing GraphQL subscription operations using a variety of protocols (including WebSocket and HTTP). You can configure the Explorer to use whichever protocol your GraphQL endpoint requires.
