--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: The GraphOS Studio Explorer
-description: Overview
+subtitle: Discover Apollo's comprehensive IDE for GraphQL operation management
+description: Learn about the Apollo GraphOS Studio Explorer—a powerful web IDE for creating, running, and managing GraphQL operations.
 ---
 
 The GraphOS Studio Explorer is a powerful web IDE for creating, running, and managing GraphQL operations:
