Update meta descriptions

--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apollo GraphOS Data Privacy and Compliance
+title: GraphOS Data Privacy and Compliance
 description: Understand what GraphOS ingests and learn about GDPR
 ---
 
