--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -1,6 +1,7 @@
 ---
 title: Safelisting with Persisted Queries
-description: Secure your graph while minimizing request latency
+subtitle: Secure your graph while minimizing request latency
+description: Secure your GraphQL APIs by maintaining an allowlist of trusted operations. Configure security levels for incremental adoption.
 ---
 
 <EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#graphos-router" />
