--- a/src/content/graphos/basics/platform-api.mdx
+++ b/src/content/graphos/basics/platform-api.mdx
@@ -1,6 +1,7 @@
 ---
 title: The GraphOS Platform API
-description: Automate GraphOS tasks in your own code
+subtitle: Automate GraphOS tasks in your own code
+description: Fetch graph details, publish schemas, run schema checks, manage proposals, and more. Access API documentation within GraphOS Studio.
 ---
 
 The _GraphOS Platform API_ enables you to perform GraphOS actions from your own custom application. Currently, these actions include:
