--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -1,6 +1,6 @@
 ---
 title: Publishing Schemas to GraphOS
-subtitle: Using the Rover CLI
+subtitle: Use the Rover CLI to publish schemas as part of your  CI/CD pipeline
 description: Publish your GraphQL schemas to Apollo GraphOS using the Rover CLI in your continuous delivery pipeline.
 ---
 
