--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: GraphOS Enterprise Features
-description: Overview
+subtitle: Learn about Enterprise routing, schema pipeline, management, and reporting features
+description: Explore the robust routing, delivery, governance, and reporting capabilities of Apollo GraphOS Enterprise.
 ---
 
 With an Apollo GraphOS Enterprise plan, you gain access to powerful routing, delivery, governance, and reporting features for your supergraph. This article summarizes the most notable of these features and provides links to the full documentation for each.
