--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -1,7 +1,7 @@
 ---
 title: Get Started with GraphOS
-subtitle: Create your first cloud supergraph
-description: This free quickstart guides you through creating your first cloud supergraph using GraphOS Studio. No paid plan needed.
+subtitle: Set up your first cloud supergraph
+description: This free quickstart guides you through setting up your first cloud supergraph using GraphOS Studio. No paid plan needed.
 ---
 
 Hello! 👋 This quickstart gets you up and running with GraphOS and your first supergraph. None of this setup requires a paid plan.
