--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -1,7 +1,7 @@
 ---
 title: Schema Linter Rules
-subtitle: Reference
-description: Reference for GraphOS schema linting rules with examples
+subtitle: Reference for GraphOS linting rules with examples
+description: Reference for GraphQL schema linter rules. Ensure consistent naming conventions, type definitions, and directive usage with examples for each violation.
 ---
 
 This reference lists the rules that you can enforce with [GraphOS schema linting](./schema-linter), along with the code that GraphOS returns for each rule violation.
