UI update alignment

--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -15,11 +15,11 @@ Notifications indicate whether the build succeeded. Successful build notificatio
 
 <CreateNotification notificationType="Build Status" />
 
-## Configure a new channel
+## Configure webhook
 
 <ConfigureWebhookNotification />
 
-## Webhook format
+### Webhook format
 
 Custom webhook notification details are provided as a JSON object in the request body.
 
