--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -25,7 +25,7 @@ GraphOS supports the following notification types:
 
 Refer to notification type pages for setup instructions.
 
-## Supported channels
+## Supported notification channels
 
 GraphOS can send notifications to the indicated channels:
 
