--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -158,6 +158,11 @@ The signature algorithm's primary purpose is to group operations that differ onl
 However, you should not rely on this! Ideally, your sensitive data should never reach GraphOS Studio in the first place. Whenever possible, [use GraphQL variables](/react/data/operation-best-practices/#use-graphql-variables-to-provide-arguments) instead of in-line values for arguments. This helps you control exactly which values are reported to Apollo. For details, see [GraphOS Studio data privacy and compliance](../data-privacy/).
 
 ## Logging signatures at runtime
+
+### Apollo Router
+Since Apollo Router [v1.43.1](https://github.com/apollographql/router/releases/tag/v1.43.1), the operation signature is added to the context in the key `apollo_operation_signature`. You can read the context in either Rhai scripts or a coprocessor, or using the logging features of Router, you can log context values as [trace attributes](/docs/router/configuration/telemetry/instrumentation/selectors).
+
+### Apollo Server
 To view operation signature hashes in your own logging tools, you can create an [Apollo Server plugin](/apollo-server/integrations/plugins/) that accesses hash values from the shared `context`. The relevant values are available in the `queryHash` and `operationName` properties:
 
 <MultiCodeBlock>
