Update cloud routing overview

--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -52,11 +52,12 @@ See the [pricing page](https://www.apollographql.com/pricing/) for more informat
 
 ### Cloud router regions
 
-Cloud routing for Serverless plans is only available in the us-east-1 AWS region. Dedicated cloud routers have a wider [variety of options](./dedicated#runs-on-aws). Region selection for cloud routers is only available on the Dedicated plan. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Sales</TrackableLink> to learn more.
+Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud routers have a wider [variety of options](./dedicated#runs-on-aws). Region selection for cloud routers is only available on the Dedicated plan. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Sales</TrackableLink> to learn more.
 
 <Note>
 
-Serverless cloud routers were previously hosted in Chicago, Illinois. [Learn more.](./serverless/aws-migration/#change-summary)
+Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
+You can view a cloud router's region from the right **Cloud Router Details** panel on the right side of a graph's overview page.
 
 </Note>
 
