Title case nav titles

--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Metrics and Insights in GraphOS
+title: Metrics and Reporting in GraphOS
 subtitle: Understand your supergraph's usage and performance
 description: Learn how to monitor and optimize your GraphQL usage and performance with raw metrics, insights, and alerts with Apollo GraphOS.
 ---
