--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -57,7 +57,14 @@ Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud
 <Note>
 
 Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
-You can view a cloud router's region from the right **Cloud Router Details** panel on the right side of a graph's overview page.
+If your Serverless graph's **Overview** page doesn't show **AWS-us-east-1** under the graph ref, then it is hosted in Chicago.
+
+<img
+  className="screenshot"
+  alt="Variant overview page in GraphOS Studio"
+  src="../img/cloud-routing/graph-overview.jpg"
+  width="700"
+/>
 
 </Note>
 
