Add migration guide

--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -56,15 +56,8 @@ Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud
 
 <Note>
 
-Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
+Some legacy Serverless cloud routers are hosted in Chicago, Illinois. [Learn more.](./serverless/aws-migration/#change-summary)
 If your Serverless graph's **Overview** page doesn't show **AWS-us-east-1** under the graph ref, then it is hosted in Chicago.
-
-<img
-  className="screenshot"
-  alt="Variant overview page in GraphOS Studio"
-  src="../img/cloud-routing/graph-overview.jpg"
-  width="700"
-/>
 
 </Note>
 
