More title casing

--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cloud Dedicated Overview
-subtitle: Learn about the Cloud Dedicated offering and pricing
+subtitle: Learn about the Dedicated cloud router offering and pricing
 description: Learn about Apollo's dedicated cloud routing for GraphQL APIs including available AWS regions and pricing.
 ---
 
