--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Serverless cloud router
+title: Cloud Serverless Overview
 subtitle: Learn about Serverless cloud routing use cases and limitations
 description: Learn about Apollo GraphOS Serverless cloud routers, including intended use cases, limitations, and router statuses.
 ---
