Consolidate cloud router configuration settings in Studio

--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -178,15 +178,7 @@ We'll cover some of these pages in later steps, but feel free to click around an
 
 Before we try executing operations on your supergraph, we need to make sure your router is set up to communicate successfully with both your clients and your subgraph.
 
-Go to your variant's **Settings** page, then click **Cloud Router**:
-
-<img
-  className="screenshot"
-  alt="Configuring the routing for your cloud supergraph in GraphOS Studio"
-  src="../../img/cloud-routing/configuration-main.jpg"
-/>
-
-This page displays your router's endpoint URL, and it also enables you to customize its networking behavior with YAML-based config. Under **Router configuration YAML**, you'll see a default configuration similar to the following:
+Open your variant's **Cloud Router** page from the left navigation. This page displays your router's endpoint URL, and it also enables you to customize its networking behavior with YAML-based config. Under **Router configuration YAML**, you'll see a default configuration similar to the following:
 
 ```yaml
 cors:
