--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -57,13 +57,13 @@ Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud
 <Note>
 
 Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
-If your Serverless graph's **Overview** page doesn't show **AWS-us-east-1** under the graph ref, then it is hosted in Chicago.
+You can view your cloud router's region on a graph's **Overview** page under **Cloud Router Details**.
 
 <img
   className="screenshot"
   alt="Variant overview page in GraphOS Studio"
-  src="../img/cloud-routing/graph-overview.jpg"
-  width="700"
+  src="../img/cloud-routing/cloud-router-details.jpg"
+  width="300"
 />
 
 </Note>
