--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -57,7 +57,7 @@ Serverless cloud routers are hosted in the us-east-1 AWS region. Dedicated cloud
 <Note>
 
 Some legacy Serverless cloud routers are hosted in Chicago, Illinois.
-You can view your cloud router's region on a graph's **Overview** page under **Cloud Router Details**.
+You can view a cloud router's region on its graph's **Overview** page under **Cloud Router Details**.
 
 <img
   className="screenshot"
