--- a/src/content/graphos/cloud-routing/configuration.mdx
+++ b/src/content/graphos/cloud-routing/configuration.mdx
@@ -4,23 +4,13 @@ subtitle: Learn how to configure cloud routers in GraphOS Studio
 description: Learn about cloud router configurations including HTTP header rules, CORSs settings, secret management, and more in GraphOS Studio.
 ---
 
-After you create a cloud supergraph, you can view and manage its router's configuration from GraphOS Studio.
+After you create a cloud supergraph, you can manage its router configuration from the **Cloud Router** page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 
-- For cloud routers on the Serverless plan, go to the **Settings** page for your variant in Studio, then click the **Cloud Router** tab:
-
-  <img
-    className="screenshot"
-    alt="Configuring the routing for your cloud supergraph in GraphOS Studio"
-    src="../img/cloud-routing/configuration-main.jpg"
-  />
-
-- For cloud routers on the Dedicated plan, open the **Cloud Router** page from the left navigation:
-
-  <img
-    className="screenshot"
-    alt="The Cloud Router page in GraphOS Studio"
-    src="../img/cloud-dedicated/dedicated-configuration.png"
-  />
+<img
+  className="screenshot"
+  alt="The Cloud Router page in GraphOS Studio"
+  src="../img/cloud-dedicated/dedicated-configuration.png"
+/>
 
 This page shows the following information:
 
